@@ -1,3 +1,10 @@
+2006-03-02  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* macosx/tkMacOSXDraw.c (TkPutImage): fix endian issue on OS X x86
+	displaying images.  Bitmap images still have a black/white
+	reversal issue, appears to be a general OS X issue (as seen in
+	frogger demo).
+
 2006-02-27  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
 	* generic/tkBitmap.c (Tk_GetBitmapFromData): Improve thread-safety.
